--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                             <div class="media-image">
                                 <img src="images/02-1.jpg" alt="Image" class="img-fluid">
                                 <div class="media-image-body">
-                                    <h2 class="font-secondary text-uppercase">U-Kron</h2>
+                                    <h2 class="font-secondary text-uppercase">U-crown</h2>
                                     <p>Latecomer</p>
                                     <p><a href="documenst/ac types/U KRON.pdf" class="btn btn-primary text-white px-4">Learn More</a></p>
                                 </div>
