--- a/contact palakkad.html
+++ b/contact palakkad.html
@@ -139,11 +139,11 @@
                     <span class="caption d-block text-white">sreekrishnasrayam tower<br>
                         nh junction, kazhchaparambu<br>
                         kannadi, palakkad<br>
-                        mob :
-                        <a href="tel:+919497458060">+91 949 74 58 060</a><br>
-                        mob :
+                        Mob :
+                        <a href="tel:+918589998976">+91 858 99 98 976</a><br>
+                        Mob :
                         <a href="tel:+917558811860">+91 755 88 11 860</a><br> 
-                        mob :
+                        Tel :
                         <a href="tel:+91487295806">+91 487 295 8060</a></span>
                 </div>
             </div>
