--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                 <div class="col-md-5 text-center" data-aos="fade">
                     <h1 class="text-uppercase">thrissur</h1>
                     <span class="caption d-block text-white">near kuttanallur bhagavathy temple<br>
-                        nh by-pass,thrissur - 380306<br>
+                        nh by-pass,thrissur - 680 306<br>
                         mob :
                         <a href="tel:+919497458060">+91 949 74 58 060</a><br>
                         mob :
