--- a/contact.html
+++ b/contact.html
@@ -138,11 +138,11 @@
                     <h1 class="text-uppercase">thrissur</h1>
                     <span class="caption d-block text-white">near kuttanallur bhagavathy temple<br>
                         nh by-pass,thrissur - 680 306<br>
-                        mob :
+                        Mob :
                         <a href="tel:+919497458060">+91 949 74 58 060</a><br>
-                        mob :
+                        Mob :
                         <a href="tel:+917558811860">+91 755 88 11 860</a><br> 
-                        mob :
+                        Tel :
                         <a href="tel:+91487295806">+91 487 295 8060</a>
                         
 
