--- a/contact palakkad.html
+++ b/contact palakkad.html
@@ -138,7 +138,7 @@
                     <h1 class="text-uppercase">palakkad</h1>
                     <span class="caption d-block text-white">sreekrishnasrayam tower<br>
                         nh junction, kazhchaparambu<br>
-                        kannadi, palakkad<br>
+                        kannadi, palakkad-678 701<br>
                         Mob :
                         <a href="tel:+918589998976">+91 858 99 98 976</a><br>
                         Mob :
