--- a/index.html
+++ b/index.html
@@ -179,7 +179,47 @@
 
         <div class="slant-1"></div>
 
-        <div class="site-section first-section">
+        
+        <div class="site-half first-section">
+            <div class="img-bg-1" style="background-image: url('images/new/about2-img.png');" data-aos="fade"></div>
+            <div class="container">
+                <div class="row no-gutters align-items-stretch">
+                    <div class="col-lg-5 ml-lg-auto py-5">
+                        <span class="caption d-block mb-2 font-secondary font-weight-bold"></span>
+                        <h2 class="site-section-heading text-uppercase font-secondary mb-5">INDRODUCTION</h2>
+                        <p>ECO COOL STRIVES to be the premier AC service provider setting high unmatched standards in terms of quality, value, and customer satisfaction. The Company will continue to grow; adopting modern technologies and developing competencies
+                            among its people, in order to continuously assure customer's satisfaction through quality service workmanship. To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries
+                            throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving solutions.
+                        </p>
+
+                        <p>To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving
+                            solutions.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="site-half block">
+            <div class="img-bg-1 right" style="background-image: url('images/new/about3-img.png');" data-aos="fade"></div>
+            <div class="container">
+                <div class="row no-gutters align-items-stretch">
+                    <div class="col-lg-5 mr-lg-auto py-5">
+                        <span class="caption d-block mb-2 font-secondary font-weight-bold"></span>
+                        <h2 class="site-section-heading text-uppercase font-secondary mb-5">OUR mission</h2>
+                        <p>To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving
+                            solutions.
+
+
+                        </p>
+
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="site-half">
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-md-12 text-center" data-aos="fade">
@@ -227,45 +267,6 @@
             </div>
         </div>
 
-
-        <div class="site-half">
-            <div class="img-bg-1" style="background-image: url('images/new/about2-img.png');" data-aos="fade"></div>
-            <div class="container">
-                <div class="row no-gutters align-items-stretch">
-                    <div class="col-lg-5 ml-lg-auto py-5">
-                        <span class="caption d-block mb-2 font-secondary font-weight-bold"></span>
-                        <h2 class="site-section-heading text-uppercase font-secondary mb-5">INDRODUCTION</h2>
-                        <p>ECO COOL STRIVES to be the premier AC service provider setting high unmatched standards in terms of quality, value, and customer satisfaction. The Company will continue to grow; adopting modern technologies and developing competencies
-                            among its people, in order to continuously assure customer's satisfaction through quality service workmanship. To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries
-                            throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving solutions.
-                        </p>
-
-                        <p>To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving
-                            solutions.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="site-half block">
-            <div class="img-bg-1 right" style="background-image: url('images/new/about3-img.png');" data-aos="fade"></div>
-            <div class="container">
-                <div class="row no-gutters align-items-stretch">
-                    <div class="col-lg-5 mr-lg-auto py-5">
-                        <span class="caption d-block mb-2 font-secondary font-weight-bold"></span>
-                        <h2 class="site-section-heading text-uppercase font-secondary mb-5">OUR mission</h2>
-                        <p>To be the ultimate provider of total HVAC solutions to our customers through 100 exclusive showrooms and 400 subsidiaries throughout Kerala. Support growth and development with environmentally friendly, innovative and energy-saving
-                            solutions.
-
-
-                        </p>
-
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
         <div class="site-section ">
