--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                 <div class="col-md-5 text-center" data-aos="fade">
                     <h1 class="text-uppercase">thrissur</h1>
                     <span class="caption d-block text-white">near kuttanallur bhagavathy temple<br>
-                        nh by-pass,thrissur - 680 306<br>
+                        nh by-pass,thrissur - 680 014<br>
                         Mob :
                         <a href="tel:+919497458060">+91 949 74 58 060</a><br>
                         Mob :
@@ -237,7 +237,7 @@
                         <h3 class="footer-heading mb-4 text-white">THRISSUR </h3>
                         <p>Near Kuttanellur Bhagavathy temple<br>NH by-pass,THRISSUR-680306<br> mob :
                             <a href="tel:+919497458060">+91 949 74 58 060</a><br> mob :
-                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
                             <a href="tel:+91487295806">+91 487 295 8060</a>
                         </p>
                         <p><a href="contact.html" class="btn btn-primary text-white px-4">Contact us</a></p>
