--- a/contact kottayam.html
+++ b/contact kottayam.html
@@ -222,16 +222,7 @@
 
 
 
-        <div class="py-5 bg-primary">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-md-6 text-center mb-3 mb-md-0">
-                        <h2 class="text-uppercase text-white mb-4">Try For Your Next Project</h2>
-                        <a href="#" class="btn btn-bg-primary font-secondary text-uppercase">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
         <footer class="site-footer bg-dark">
             <div class="container">
@@ -242,7 +233,7 @@
                         <h3 class="footer-heading mb-4 text-white">THRISSUR </h3>
                         <p>Near Kuttanellur Bhagavathy temple<br>NH by-pass,THRISSUR-680306<br> mob :
                             <a href="tel:+919497458060">+91 949 74 58 060</a><br> mob :
-                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
                             <a href="tel:+91487295806">+91 487 295 8060</a>
                         </p>
                         <p><a href="contact.html" class="btn btn-primary text-white px-4">Contact us</a></p>
