--- a/contact Eranakulam.html
+++ b/contact Eranakulam.html
@@ -233,7 +233,7 @@
                         <p>buliding no:14/107<br> near muttom metro station<br> piller no:P179/a<br> ERNAKULAM-683106
                             <br> mob :
                             <a href="tel:+919497458060">+91 949 74 58 060</a><br> mob :
-                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel:
                             <a href="tel:+91487295806">+91 487 295 8060</a>
                         </p>
                         <p><a href="contact.html" class="btn btn-primary text-white px-4">Contact us</a></p>
