--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             <a href="about.html">About</a>
                                             <ul class="dropdown arrow-top">
                                                 <li><a href="testimonials.html">Sub dealers & Review</a></li>
-                                                <li><a href="gallery.html">COMPANY EVENTS</a></li>
+                                                <li><a href="gallery.html">COMPANY EVENTe</a></li>
                                                 <li><a href="faq.html">FAQ</a></li>
                                                 <li><a href="why-choose-us.html">Why Choose Us</a></li>
                                             </ul>
@@ -179,7 +179,7 @@
 
         <div class="slant-1"></div>
 
-        
+
         <div class="site-half first-section">
             <div class="img-bg-1" style="background-image: url('images/new/about2-img.png');" data-aos="fade"></div>
             <div class="container">
@@ -218,7 +218,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="site-half">
             <div class="container">
                 <div class="row mb-5">
