--- a/about.html
+++ b/about.html
@@ -316,6 +316,25 @@
                             <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
                             <a href="tel:+91487295806">+91 487 295 8060</a>
                         </p>
+                        <h3 class="footer-heading mb-4 text-white">PALAKKAD </h3>
+                        <p>SREEKRISHNASRAYAM TOWER NH JUNCTION, KAZHCHAPARAMBU KANNAD
+                            <br>PALAKKAD-678 701<br> mob :
+                            <a href="tel:+91 858 99 98 976">+91 858 99 98 976</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
+                            <a href="tel:+91487295806">+91 487 295 8060</a>
+                        </p>
+                        <h3 class="footer-heading mb-4 text-white">ERNAKULAM </h3>
+                        <p>Near Kuttanellur Bhagavathy temple<br>NH by-pass,THRISSUR-680306<br> mob :
+                            <a href="tel:+919497458060">+91 949 74 58 060</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
+                            <a href="tel:+91487295806">+91 487 295 8060</a>
+                        </p>
+                        <h3 class="footer-heading mb-4 text-white">THRISSUR </h3>
+                        <p>Near Kuttanellur Bhagavathy temple<br>NH by-pass,THRISSUR-680306<br> mob :
+                            <a href="tel:+919497458060">+91 949 74 58 060</a><br> mob :
+                            <a href="tel:+917558811860">+91 755 88 11 860</a><br> tel :
+                            <a href="tel:+91487295806">+91 487 295 8060</a>
+                        </p>
                         <p><a href="contact.html" class="btn btn-primary text-white px-4">Contact us</a></p>
                     </div>
                     <div class="col-md-5 mb-4 mb-md-0 ml-auto">
